# kuroko

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  deny.toml  task.md
.claude/skills/release/: SKILL.md
.githooks/: pre-push
.github/workflows/: ci.yml
crates/aijin-agent/: Cargo.toml
crates/aijin-agent/src/: agent_pane.rs  lib.rs  provider.rs
crates/aijin-core/: Cargo.toml
crates/aijin-core/src/: error.rs  layout.rs  lib.rs  pane.rs  theme.rs
crates/aijin-filetree/: Cargo.toml
crates/aijin-filetree/src/: filetree_pane.rs  icons.rs  lib.rs
crates/aijin-lua/: Cargo.toml
crates/aijin-lua/src/: keymap.rs  lib.rs  runtime.rs
crates/aijin-terminal/: Cargo.toml
crates/aijin-terminal/src/: lib.rs  pty_handle.rs  terminal_pane.rs  widget.rs
crates/aijin-tui/: Cargo.toml
crates/aijin-tui/src/: app.rs  lib.rs
crates/aijin-tui/src/app/: file_ops.rs  input.rs  overlay.rs  render.rs  session.rs  tab_manager.rs  tests.rs
crates/kuroko-agent/: Cargo.toml
crates/kuroko-agent/src/: agent_pane.rs  lib.rs  provider.rs  status.rs
crates/kuroko-core/: Cargo.toml
crates/kuroko-core/src/: action.rs  error.rs  event.rs  layout.rs  lib.rs  pane.rs  theme.rs  types.rs
crates/kuroko-filetree/: Cargo.toml
crates/kuroko-filetree/src/: filetree_pane.rs  icons.rs  lib.rs  tree.rs
crates/kuroko-lua/: Cargo.toml
crates/kuroko-lua/src/: keymap.rs  lib.rs  runtime.rs
crates/kuroko-terminal/: Cargo.toml
crates/kuroko-terminal/src/: lib.rs  pty_handle.rs  terminal_pane.rs  widget.rs
crates/kuroko-tui/: Cargo.toml
crates/kuroko-tui/src/: app.rs  lib.rs
crates/kuroko-tui/src/app/: file_ops.rs  input.rs  overlay.rs  render.rs  session.rs  tab_manager.rs  tests.rs
docs/adr/: 0001-panel-slot-architecture.md  0002-pty-thread-model.md  0003-borderless-panes-with-separators.md  0004-theme-struct-and-role-based-accents.md  0005-normal-mode-direct-operation-for-nonraw-panes.md  0006-rename-to-kuroko-and-homebrew-distribution.md  0007-global-layer-replaces-modes.md  0008-file-editor-dialog-replaces-preview.md  0009-external-file-manager.md  0010-agent-idle-desktop-notification.md
lua/: init.lua
src/: main.rs
