[workspace]
resolver = "2"
members = [
    "crates/aijin-core",
    "crates/aijin-terminal",
    "crates/aijin-filetree",
    "crates/aijin-agent",
    "crates/aijin-lua",
    "crates/aijin-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
aijin-core = { path = "crates/aijin-core" }
aijin-terminal = { path = "crates/aijin-terminal" }
aijin-filetree = { path = "crates/aijin-filetree" }
aijin-agent = { path = "crates/aijin-agent" }
aijin-lua = { path = "crates/aijin-lua" }
aijin-tui = { path = "crates/aijin-tui" }
ratatui = "0.30"
portable-pty = "0.8"
vt100 = { path = "vendor/vt100" }
anyhow = "1"
thiserror = "2"
chrono = "0.4"
which = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
cargo_common_metadata = "allow"

[workspace.lints.rust]
warnings = "deny"

[package]
name = "aijin"
version.workspace = true
edition.workspace = true


[dependencies]
aijin-tui.workspace = true
ratatui.workspace = true

[lints]
workspace = true
