[workspace]
resolver = "2"
# vendor/vt100はベンダリングフォークのため、fmt/clippy/testの対象から外す
# （upstreamとの差分を最小に保つ。パス依存としてのビルドは除外後も可能）
exclude = ["vendor/vt100"]
members = [
    "crates/kuroko-core",
    "crates/kuroko-terminal",
    "crates/kuroko-filetree",
    "crates/kuroko-agent",
    "crates/kuroko-lua",
    "crates/kuroko-tui",
]

[workspace.package]
version = "0.2.4"
edition = "2024"
license = "MIT"

[workspace.dependencies]
kuroko-core = { path = "crates/kuroko-core" }
kuroko-terminal = { path = "crates/kuroko-terminal" }
kuroko-filetree = { path = "crates/kuroko-filetree" }
kuroko-agent = { path = "crates/kuroko-agent" }
kuroko-lua = { path = "crates/kuroko-lua" }
kuroko-tui = { path = "crates/kuroko-tui" }
ratatui = "0.30"
portable-pty = "0.8"
vt100 = { path = "vendor/vt100" }
anyhow = "1"
thiserror = "2"
chrono = "0.4"
which = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
cargo_common_metadata = "allow"

[workspace.lints.rust]
warnings = "deny"

[package]
name = "kuroko"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "krk"
path = "src/main.rs"

[dependencies]
kuroko-tui.workspace = true
ratatui.workspace = true

[lints]
workspace = true
