[package]
name = "aijin-tui"
version.workspace = true
edition.workspace = true

[dependencies]
aijin-core.workspace = true
aijin-terminal.workspace = true
aijin-filetree.workspace = true
aijin-agent.workspace = true
aijin-lua.workspace = true
ratatui.workspace = true
arboard = "3"
trash = "5"
chrono.workspace = true
which.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[lints]
workspace = true
