[package]
name = "kuroko-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kuroko-core.workspace = true
kuroko-terminal.workspace = true
kuroko-filetree.workspace = true
kuroko-agent.workspace = true
kuroko-lua.workspace = true
# unstable-rendered-line-info: Paragraph::line_count（折り返し後の行数取得）に必要
ratatui = { workspace = true, features = ["unstable-rendered-line-info"] }
arboard = "3"
trash = "5"
chrono.workspace = true
which.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[lints]
workspace = true
